--- a/html/index.html
+++ b/html/index.html
@@ -18,8 +18,16 @@
                 <div class="jumbotron text-center"  style = "background-color: rgb(255, 255, 255);" >  
                     <h1>Vitamin Ventures</h1>
                     <br>
-                    <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec laoreet malesuada odio, vel bibendum arcu lobortis sit amet. "</p>
-                    <p>"Donec venenatis lorem at orci lacinia, sed pretium nisl auctor. In hac habitasse platea dictumst. Curabitur leo lorem, consectetur id gravida nec, consectetur vitae urna."</p>
+                    <p>Vitamin Ventures was founded to make lives better with their vitamins. The 
+                      company manufactures and sells vitamins directly to consumers online and to third 
+                      party wholesalers. They are currently in their 5th year of business, and they know 
+                      they are growing astronomically, but they want to position themeselves to be a 
+                      lasting brand</p>
+                    <p>We have been given 2 sets of data to study their current 
+                      trends. Our team will break down each product and examine the quantity and dollar
+                      sales by month, and we will further look at each channel to see where the company 
+                      should sell next. The data also provides us with customer locations, so we can 
+                      guage where the brand has opportunity.</p>
                 <nav class="navigation"> 
                     <h2>
                       <a style="margin-right: 3em;" href="index.html"> 
@@ -48,36 +56,25 @@
         <embed type="text/html" src="Graphs/International_Presence.html" width="1500" height="600">
       </div>
       <div class="col-md-12 plots">
-        <h2>
+        <h1>
           Company Overview
-        </h2>
+        </h1>
+          <h3><b1>Vitamin Ventures Sales % Growth - YTD 2021</b1></h3>
+          <embed type="text/html" src="Graphs/Gauge.html" width="1000" height="500">  
         <p class="col-md-50 text-center">
           <br>Overall, total net sales for Vitamin Ventures is $8.6 million for the year 2021.
-          <br> Vitamin Ventures experienced an increase in net sales over 2020 by a whopping 95%.  
-          <br>This substantial growth is due in large part to the company’s initiative to enter new markets such 
-          as bigbox retailers like Walmart and e-commerce sellers  like Etsy.  
-          <br>However, the company’s website 
-          sales remain the largest contributor representing 55% of total net sales in 2021.
-          <br>Overall, total net sales for Vitamin Ventures is $8.6 million for the year 2021.
-          <br> Vitamin Ventures experienced an increase in net sales over 2020 by a whopping 95%.  
-          <br>This substantial growth is due in large part to the company’s initiative to enter new markets such 
-          as bigbox retailers like Walmart and e-commerce sellers  like Etsy.  
-          <br>However, the company’s website 
-          sales remain the largest contributor representing 55% of total net sales in 2021.
+          <br>Vitamin Ventures experienced an increase in net sales over 2020 by a whopping 95%.
         </p>
       </div> 
       <div class="col-md-12 plots">
-        <h2><b1>Vitamin Ventures Total Company Sales - 2020 through 2021</b1></h2>
-        <br>
-        <br>
+        <h3><b1>Vitamin Ventures Total Company Sales - 2020 through 2021</b1></h3>
         <embed type="text/html" src="Graphs/Total_Net_Sales_2020-2021_line.html" width="1500" height="600">
-      </div>
-      <div class="col-md-12 plots">
-        <br>
-      <br>
-      <br>
-        <h2><b1>Vitamin Ventures Sales % Growth - YTD 2021</b1></h2>
-        <embed type="text/html" src="Graphs/Gauge.html" width="1500" height="600">
+          <p class="col-md-50 text-center">
+            <br>The company’s website sales remain the largest contributor representing 55% of total net sales in 2021.
+            <br>Overall, total net sales for Vitamin Ventures is $8.6 million for the year 2021.
+            <br>This substantial growth is due in large part to the company’s initiative to enter new markets such 
+          as bigbox retailers like Walmart and e-commerce sellers like Etsy and Amazon.
+          </p>
       </div>
     </div>
     <div class="row">
