Updated Channels & Products charts

--- a/html/index.html
+++ b/html/index.html
@@ -33,15 +33,15 @@
                       <a style="margin-right: 3em;" href="index.html"> 
                         ABOUT 
                     </a> 
-                    <a style="margin-left: 3em; margin-right: 3em;" href="USA.html">
+                    <a style="margin-left: 3em; margin-right: 3em;" href="CHANNELS_PRODUCTS.html"> 
+                      CHANNELS & PRODUCTS
+                    </a>
+                    <a style="margin-left: 3em; margin-right: 4em;" href="USA.html">
                         USA Analysis 
                     </a> <!-- "margin-left: 3em; margin-right: 3em;" -->
-                    <a style="margin-left: 3em; margin-right: 3em;" href="INTERNATIONAL.html">
+                    <a style="margin-right: 2em;" href="INTERNATIONAL.html">
                         INTERNATIONAL Analysis 
                     </a> 
-                    <a style="margin-right: 3em;" href="CHANNELS.html"> 
-                        CHANNELS 
-                    </a>
                     </h2>
                 </nav>
             </div>
