--- a/html/INTERNATIONAL.html
+++ b/html/INTERNATIONAL.html
@@ -22,18 +22,18 @@
                     <p>"Donec venenatis lorem at orci lacinia, sed pretium nisl auctor. In hac habitasse platea dictumst. Curabitur leo lorem, consectetur id gravida nec, consectetur vitae urna."</p>
                 <nav class="navigation"> 
                     <h2>
-                            <a style="margin-right: 3em;" href="index.html"> 
-                                ABOUT 
-                            </a> 
-                            <a style="margin-left: 3em; margin-right: 3em;" href="USA.html">
-                                USA Analysis 
-                            </a> <!-- "margin-left: 3em; margin-right: 3em;" -->
-                            <a style="margin-left: 3em; margin-right: 3em;" href="INTERNATIONAL.html">
-                                INTERNATIONAL Analysis 
-                            </a> 
-                            <a style="margin-right: 3em;" href="CHANNELS.html"> 
-                                CHANNELS 
-                            </a>
+                        <a style="margin-right: 3em;" href="index.html"> 
+                            ABOUT 
+                        </a> 
+                        <a style="margin-left: 3em; margin-right: 3em;" href="CHANNELS_PRODUCTS.html"> 
+                            CHANNELS & PRODUCTS
+                        </a>
+                        <a style="margin-left: 3em; margin-right: 4em;" href="USA.html">
+                            USA Analysis 
+                        </a> <!-- "margin-left: 3em; margin-right: 3em;" -->
+                        <a style="margin-right: 2em;" href="INTERNATIONAL.html">
+                            INTERNATIONAL Analysis 
+                        </a> 
                     </h2>
                 </nav>
             </div>
@@ -68,6 +68,20 @@
                 </div>
         </div>
         -->
+        <div class="row  col-md-50  ">
+            <div class="col-md-12 plots" >
+            <h2><b2>
+                Overall International Sales- 2020 through 2021
+            </b2></h2>
+            <embed type="text/html" src="Graphs/International_Sales_Line.html" width="1500" height="600">
+            </div>
+            <div class="col-md-12 summary" id="plot-summary">
+            <p>
+            <br>
+            Vestibulum cursus tellus lorem, vitae dapibus diam suscipit ut. Donec eget tellus dui. Etiam scelerisque leo et arcu scelerisque, in aliquet dui commodo. Duis rutrum sem vel placerat facilisis. Nunc ac leo sagittis, scelerisque neque ut, luctus nisl. Donec venenatis augue sed aliquet aliquet. Proin eu nisi at nisi placerat sollicitudin. Aenean interdum nisl libero, eu euismod metus pulvinar sit amet.
+            </p>
+            </div>
+        </div>
         <div class="row  col-md-50  ">
             <div class="col-md-12 plots" >
             <h2><b2>
