--- a/html/USA.html
+++ b/html/USA.html
@@ -24,15 +24,15 @@
                         <a style="margin-right: 3em;" href="index.html"> 
                             ABOUT 
                         </a> 
-                        <a style="margin-left: 3em; margin-right: 3em;" href="USA.html">
+                        <a style="margin-left: 3em; margin-right: 3em;" href="CHANNELS_PRODUCTS.html"> 
+                            CHANNELS & PRODUCTS
+                        </a>
+                        <a style="margin-left: 3em; margin-right: 4em;" href="USA.html">
                             USA Analysis 
                         </a> <!-- "margin-left: 3em; margin-right: 3em;" -->
-                        <a style="margin-left: 3em; margin-right: 3em;" href="INTERNATIONAL.html">
+                        <a style="margin-right: 2em;" href="INTERNATIONAL.html">
                             INTERNATIONAL Analysis 
                         </a> 
-                        <a style="margin-right: 3em;" href="CHANNELS.html"> 
-                            CHANNELS 
-                        </a>
                     </h2>
                 </nav>
             </div>
@@ -87,6 +87,22 @@
             </p>
             </div>
         </div>
+        <div class="row">
+            <div class="col-md-12 plots">
+                    <h2>USA Sales- 2020 through 2021</h2>
+                    <br>
+                    <p></p>
+            </div>
+            <div class="row">
+                <div class="col-md-12 plots">
+                        <embed type="text/html" src="Graphs/US_Sales_Line.html" width="1500" height="600">
+                </div>
+            </div>
+        </div>
+        <p> 
+            Ut neque eros, lobortis nec vehicula ut, posuere a arcu. 
+            Aliquam commodo nunc enim, eget imperdiet neque rhoncus sed. Phasellus non mauris sed orci tincidunt molestie ut eget lorem. Sed rutrum elit nec odio vestibulum, at egestas eros pharetra.
+        </p>
         <div class="row">
             <div class="col-md-12 plots">
                     <h2>Sales by Category per Month in US 2020 through 2021 </h2>
