This provides completion to #11 #12 #13 and #14 issues.

--- a/html/CHANNELS_PRODUCTS.html
+++ b/html/CHANNELS_PRODUCTS.html
@@ -18,8 +18,6 @@
                 <div class="jumbotron text-center"  style = "background-color: rgb(255, 255, 255);" >  
                     <h1>Vitamin Ventures</h1>
                     <br>
-                    <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec laoreet malesuada odio, vel bibendum arcu lobortis sit amet. "</p>
-                    <p>"Donec venenatis lorem at orci lacinia, sed pretium nisl auctor. In hac habitasse platea dictumst. Curabitur leo lorem, consectetur id gravida nec, consectetur vitae urna."</p>
                 <nav class="navigation"> 
                     <h2>
                         <a style="margin-right: 3em;" href="index.html"> 
@@ -36,16 +34,13 @@
                         </a> 
                     </h2>
                 </nav>
+                </div>
             </div>
-        </div>
         </div>
     </header>
     <div class="container" id="visualizations">
-        <h2 class="visualization-header">Vestibulum cursus tellus lorem...</h2>
-        <p> 
-            Ut neque eros, lobortis nec vehicula ut, posuere a arcu. 
-            Aliquam commodo nunc enim, eget imperdiet neque rhoncus sed. Phasellus non mauris sed orci tincidunt molestie ut eget lorem. Sed rutrum elit nec odio vestibulum, at egestas eros pharetra.
-        </p>
+        <h2 class="visualization-header">Key Takeaway's</h2>
+        <p> Vitamin Ventures should release three or four more products to an e-commerce channel and to a big box retailer. Additionally, they should not invest as much time and effort into their other wholesalers. </p>
         <div class="row">
                 <div class="col-md-12 plots" >
                 <h2><b2>
@@ -67,10 +62,7 @@
             <embed type="text/html" src="Graphs\PNG\Picture1.png" width="1200" height="610">
             </div>
             <div class="col-md-12 plots"  id="plot-summary">
-            <p>
-            <br>
-            Vestibulum cursus tellus lorem, vitae dapibus diam suscipit ut. Donec eget tellus dui. Etiam scelerisque leo et arcu scelerisque, in aliquet dui commodo. Duis rutrum sem vel placerat facilisis. Nunc ac leo sagittis, scelerisque neque ut, luctus nisl. Donec venenatis augue sed aliquet aliquet. Proin eu nisi at nisi placerat sollicitudin. Aenean interdum nisl libero, eu euismod metus pulvinar sit amet.
-            </p>
+            <p> Vitamin Ventures should focus on planning for their growth to keep up with their demand. Sales from last year grew at a rate of 95% on average but could have grown even more if they were not out of stock of certain products </p>
             </div>
         </div>
         <div class="row  col-md-50  ">
@@ -88,8 +80,6 @@
         <div class="row">
             <div class="col-md-12 plots">
                 <h2>Sales by Channels 2020 through 2021 </h2>
-                <p>
-                </p>
                 <br>
             </div>
             <div class="row">
@@ -104,6 +94,8 @@
                     <embed type="text/html" src="Graphs/Total_Sales_by_Channel_2021_pie.html"  width="550" height="380">
                 </div>
             </div>
+            <p> Based on our data, 65% of sales for the two best selling products, were purchased through their e-commerce vendor, Amazon </p>
+            <p> Even if they are worried about taking away sales from their own website, they need to keep in mind that the volume of the sales that Amazon and Target can provide them, will make up for the marginal decrease in profit that the third-party vendor costs </p>
         </div>
         <br>
         <div class="row  col-md-50  ">
@@ -131,7 +123,7 @@
             </div>
             <div class="col-md-12 plots" >
                 <p>
-                    Vestibulum cursus tellus lorem, vitae dapibus diam suscipit ut. Donec eget tellus dui. Etiam scelerisque leo et arcu scelerisque, in aliquet dui commodo. Duis rutrum sem vel placerat facilisis. Nunc ac leo sagittis, scelerisque neque ut, luctus nisl. Donec venenatis augue sed aliquet aliquet. Proin eu nisi at nisi placerat sollicitudin. Aenean interdum nisl libero, eu euismod metus pulvinar sit amet.
+                    Based on our data, 65% of sales for the two best selling products, were purchased through their e-commerce vendor, Amazon. After discussion with the Vitamin Ventures team, the wholesalers are an important aspect of their brand awareness and word of mouth marketing. We recommend that they still build these relationships, but the growth is not there based on the data. It has stayed stagnant and is unsteady.
                 </p>
             </div>
         </div>
@@ -148,8 +140,9 @@
             </div>
             <div class="col-md-12 plots" >
                 <p>
-                    Vestibulum cursus tellus lorem, vitae dapibus diam suscipit ut. Donec eget tellus dui. Etiam scelerisque leo et arcu scelerisque, in aliquet dui commodo. Duis rutrum sem vel placerat facilisis. Nunc ac leo sagittis, scelerisque neque ut, luctus nisl. Donec venenatis augue sed aliquet aliquet. Proin eu nisi at nisi placerat sollicitudin. Aenean interdum nisl libero, eu euismod metus pulvinar sit amet.
+                    Focus should be on growing the top 15 products. These contribute to 80% to their sales while the other 50 products only produce 20% of their quantity sales.
                 </p>
+                <p> Even though the data shows consistent growth, we see dips and spikes every other month. After discussing this data with the board, Vitamin Ventures confirms that sometimes they will have to turn away orders based on supply chain issues. </p>
             </div>
         </div>
         <div class="row  col-md-50  ">
@@ -164,9 +157,7 @@
             <embed type="text/html" src="Graphs/Product_Sales_Bar.html" width="1500" height="600">
             </div>
             <div class="col-md-12 plots" >
-                <p>
-                    Vestibulum cursus tellus lorem, vitae dapibus diam suscipit ut. Donec eget tellus dui. Etiam scelerisque leo et arcu scelerisque, in aliquet dui commodo. Duis rutrum sem vel placerat facilisis. Nunc ac leo sagittis, scelerisque neque ut, luctus nisl. Donec venenatis augue sed aliquet aliquet. Proin eu nisi at nisi placerat sollicitudin. Aenean interdum nisl libero, eu euismod metus pulvinar sit amet.
-                </p>
+                <p> Vitamin Ventures should release three or four more products to an e-commerce channel and to a big box retailer. Additionally, they should not invest as much time and effort into their other wholesalers </p>
             </div>
         </div>
     </div>
