--- a/html/INTERNATIONAL.html
+++ b/html/INTERNATIONAL.html
@@ -18,8 +18,11 @@
                 <div class="jumbotron text-center"  style = "background-color: rgb(255, 255, 255);" >  
                     <h1>Vitamin Ventures</h1>
                     <br>
-                    <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec laoreet malesuada odio, vel bibendum arcu lobortis sit amet. "</p>
-                    <p>"Donec venenatis lorem at orci lacinia, sed pretium nisl auctor. In hac habitasse platea dictumst. Curabitur leo lorem, consectetur id gravida nec, consectetur vitae urna."</p>
+                    <p>
+                        While not being a main focus, Vitamin Ventures has maintained a global pressence to a certain degree. Here we will 
+                        dive into web sales data focused internationally to identify if it would be worthwhile to spend efforts growing 
+                        sales outside the US.
+                    </p>
                 <nav class="navigation"> 
                     <h2>
                         <a style="margin-right: 3em;" href="index.html"> 
@@ -41,11 +44,16 @@
         </div>
     </header>
     <div class="container" id="visualizations">
-        <h2 class="visualization-header">Vestibulum cursus tellus lorem...</h2>
+        <h2 class="visualization-header">Key Takeaway's</h2>
         <br>
         <p> 
-            Ut neque eros, lobortis nec vehicula ut, posuere a arcu. 
-            Aliquam commodo nunc enim, eget imperdiet neque rhoncus sed. Phasellus non mauris sed orci tincidunt molestie ut eget lorem. Sed rutrum elit nec odio vestibulum, at egestas eros pharetra.
+            Vitmain Ventures has created a small presence simply by expanding their sales to global e-commerce. 
+            Even with issues presented logistically due to the pandemic there has remained a demand for their products.
+        </p>
+        <p>
+            We suggest that Vitamin Ventures focus on removing less popular products and determining where 
+            production and logistics could better serve international warehouse spaces for cheaper international overhead.
+            This would allow the company to focus on marketing their product and brand to further grow international presence. 
         </p>
         <!-- 
                     <div class="row">
@@ -76,9 +84,12 @@
             <embed type="text/html" src="Graphs/International_Sales_Line.html" width="1500" height="600">
             </div>
             <div class="col-md-12 summary" id="plot-summary">
-            <p>
             <br>
-            Vestibulum cursus tellus lorem, vitae dapibus diam suscipit ut. Donec eget tellus dui. Etiam scelerisque leo et arcu scelerisque, in aliquet dui commodo. Duis rutrum sem vel placerat facilisis. Nunc ac leo sagittis, scelerisque neque ut, luctus nisl. Donec venenatis augue sed aliquet aliquet. Proin eu nisi at nisi placerat sollicitudin. Aenean interdum nisl libero, eu euismod metus pulvinar sit amet.
+            <p>
+                From the start, the company seemed to have a good revenue internationally. Sales quickly declined within 
+                the first 2 months, as products most likely hit a wall with logistic issues due to the pandemic. 
+                Data here shows a correlation with the revival of internatial logistic chains resurfacing mid to late 2021. 
+                There is quite an obvious demand for the products and the company has a lot of room to grow globally.
             </p>
             </div>
         </div>
@@ -90,17 +101,18 @@
             <embed type="text/html" src="Graphs/Top_10_International_Countries.html" width="1500" height="600">
             </div>
             <div class="col-md-12 summary" id="plot-summary">
-            <p>
             <br>
-            Vestibulum cursus tellus lorem, vitae dapibus diam suscipit ut. Donec eget tellus dui. Etiam scelerisque leo et arcu scelerisque, in aliquet dui commodo. Duis rutrum sem vel placerat facilisis. Nunc ac leo sagittis, scelerisque neque ut, luctus nisl. Donec venenatis augue sed aliquet aliquet. Proin eu nisi at nisi placerat sollicitudin. Aenean interdum nisl libero, eu euismod metus pulvinar sit amet.
+            <p>
+                To no surprise, Canada maintains itslef as the top country for international sales. Focusing outside of Canada, 
+                many countries bring in very similar levels of revenue. Kuwait, Saudi Arabia, UAE, UK, and Australia are 
+                notably countries were sales could be focused. With the top countries identified product and sale stragies can 
+                now focus better on targetting what products in these countries are valued.
             </p>
             </div>
         </div>
         <div class="row">
             <div class="col-md-12 plots">
                     <h2>Sales by Category per Month 2020 through 2021 </h2>
-                    <br>
-                    <p></p>
             </div>
             <div class="row">
                 <div class="col-md-12 plots">
@@ -109,10 +121,11 @@
             </div>
         </div>
         <br>
-        <p> 
-            Ut neque eros, lobortis nec vehicula ut, posuere a arcu. 
-            Aliquam commodo nunc enim, eget imperdiet neque rhoncus sed. Phasellus non mauris sed orci tincidunt molestie ut eget lorem. Sed rutrum elit nec odio vestibulum, at egestas eros pharetra.
-        </p>
+                    <p>
+                        Product sales by category internationally, mimic the trend we have seen in the US. Most of the 
+                        web reviews have contributed to the popularity of the flagship product that lies in general health, and 
+                        the new product lines for immune and digestive support in 2021. 
+                    </p>
         <div class="row">
             <div class="col-md-12 plots">
                 <h2>Non US Sales by Category 2020 through 2021 </h2>
@@ -128,15 +141,16 @@
                     <embed type="text/html" src="Graphs/Sales_by_Category_NonUS_2021_pie.html"  width="750" height="450">
                 </div>  
             </div>
+            <br>
+            <p>
+                Again, here we see the same trend with the products in the US, except even stronger presence of the 
+                flagship general health products.
+            </p>
         </div>
         <div class="row">
             <div class="col-md-12 plots " >
                 <br>
                 <h2>Top 10 International Sales by Product 2020 through 2021 </h2>
-                <br>
-                <p>
-                </p>
-                <br>
             </div>
             <div class="row">
                 <div class="col-md-12 ploSts" >
@@ -146,15 +160,17 @@
                     <embed type="text/html" src="Graphs/Sales_Top_Ten_by_Product_NonUS_2021_bar.html"  width="1500" height="600">
                 </div>  
             </div>
+            <br>
+            <p>
+                The most notable difference in top product sales internationally would be that the new Elderberry product, 
+                while still high in sales, did not do as well as in the US. The original flagship products held a significant 
+                lead in 2021. This market seems to be very reactive to online reviews in popularity within the states. 
+            </p>
         </div>
         <div class="row">
             <div class="col-md-12 plots " >
                 <br>
                 <h2>Bottom 10 International Sales by Product 2020 through 2021 </h2>
-                <br>
-                <p>
-                </p>
-                <br>
             </div>
             <div class="row">
                 <div class="col-md-12 ploSts" >
@@ -164,6 +180,13 @@
                     <embed type="text/html" src="Graphs/Sales_Bottom_Ten_by_Product_NonUS_2021_bar.html"  width="1500" height="600">
                 </div>  
             </div>
+            <br>
+            <p>
+                We still see very similar results in these bar charts to the US. While the company experimented with new products, it doesnt seem like many of them 
+                contributed very well to the company. Product strategy teams should re-evaluate where they would want to maintain focus in 
+                production without spreading themselves to thin. These kind of strategy meetings and analytics could have provided more 
+                bandwidth in product acquisition to prevent issues with selling out and losing a customer base due to supply issues.
+            </p>
         </div>
     </div>
 </body>
