Adding company and project overview to html #14

--- a/html/INTERNATIONAL.html
+++ b/html/INTERNATIONAL.html
@@ -182,7 +182,7 @@
             </div>
             <br>
             <p>
-                We still see very similar results in these bar charts to the US. While the company experimented with new products, it doesnt seem like many of them 
+                We still see very similar results in these bar charts to the US. While the company experimented with new products, it doesn't seem like many of them 
                 contributed very well to the company. Product strategy teams should re-evaluate where they would want to maintain focus in 
                 production without spreading themselves to thin. These kind of strategy meetings and analytics could have provided more 
                 bandwidth in product acquisition to prevent issues with selling out and losing a customer base due to supply issues.
