--- a/html/USA.html
+++ b/html/USA.html
@@ -94,7 +94,7 @@
             <p>
             <br>
             <br>
-                City net sales is eveen more interesting. While Los Angeles is the biggest money maker, as expected from above, Bozeman
+                City net sales are even more interesting. While Los Angeles is the biggest money maker, as expected from above, Bozeman
                 which resides in Montana puts this state on the map as a place with high revenue. 
             </p>
             </div>
@@ -134,20 +134,20 @@
             Here we see that the company had great success with their flagship general health products.
             There has always maintained a consistent consumer success around these products where a majority of focus should
             always be maintained. With the addition to newer product types, the biggest successful introduction was based around
-            immune and diggestive health. We believe that the company should continue to allocate resources in producing and 
-            advertising their immune and diggestive health products to add to their flagship of improving your health.
+            immune and digestive health. We believe that the company should continue to allocate resources in producing and 
+            advertising their immune and digestive health products to add to their flagship of improving your health.
         </p>
         <div class="row">
             <div class="col-md-12 plots">
                 <h2>US Sales by Category 2020 through 2021 </h2>
                 <br>
             </div>
-            <div class="row">
+            <div class="row col-md-12">
                 <div class="col-md-6 plots" >
-                    <embed type="text/html"  src="Graphs/Category_2020_US__pie.html" width="750" height="450">
+                    <embed type="text/html"  src="Graphs/Category_2020_US__pie.html" width="600" height="450">
                 </div>
                 <div class="col-md-6 plots">
-                    <embed type="text/html" src="Graphs/Category_2021_US__pie.html"  width="750" height="450">
+                    <embed type="text/html" src="Graphs/Category_2021_US__pie.html"  width="600" height="450">
                 </div>
                 <br>
                 <p> 
