Adding changes to charts

--- a/html/CHANNELS_PRODUCTS.html
+++ b/html/CHANNELS_PRODUCTS.html
@@ -42,7 +42,7 @@
             </div>
         </div>
     </header>
-    <div class="container" id="visualizations">
+    <div class="container" id="visualizations" style="width:70%;">
         <h1 class="visualization-header text-center">Key Takeaway's</h1>
         <br>
         <h3>
@@ -100,7 +100,7 @@
         <div class="row  col-lg-12 plots  ">
             <div class="col-md-12 plots" >
             <h2><b2>
-                Data Chart
+                Sales Data by Channel - 2020 and 2021
             </b2></h2>
             <br>
             <embed type="text/html" src="Graphs\PNG\Picture1.png" width="1200" height="610">
@@ -137,11 +137,6 @@
                     <embed type="text/html" src="Graphs/Total_Sales_by_Channel_2021_pie.html"  width="600" height="450">
                 </div>
             </div>
-            <div  class="col-md-12 plots" >
-                <p>Based on our data, 65% of sales for the two best selling products, were purchased through their e-commerce vendor, Amazon </p>
-                <p>Even if they are worried about taking away sales from their own website, they need to keep in mind that the volume of the sales that Amazon and Target can provide them, will make up for the marginal decrease in profit that the third-party vendor costs </p>
-            </div>
-            
         </div>
         <br>
         <br>
@@ -153,6 +148,7 @@
 
 <br>
 <br>            Based on our data (see chart Total Skus Breakdown by Channels), the top two products, sku 6666 Thyroid Complex and 3333 Fruits and Greens 30 capsules, roughly 33% of all sales were purchased through their e-commerce vendor, Amazon.  Further analysis revealed the top 15 products account for t 80% of Vitamin Ventures’ total sales while the other 50 products only produce 20%.
+Even if they are worried about taking away sales from their own website, they need to keep in mind that the volume of the sales that Amazon and Target can provide them, will make up for the marginal decrease in profit that the third-party vendor costs
 <br>
 <br>
 For future, Vitamin Ventures should release three or four more products to an e-commerce channel and to a big box retailer.  Additionally, they should not invest as much time and effort into their wholesalers.  
