--- a/html/USA.html
+++ b/html/USA.html
@@ -165,7 +165,7 @@
                 </p>
                 <br>
             </div>
-            <div class="row">
+            <div>
                 <div class="col-md-12 plots" >
                     <embed type="text/html"  src="Graphs/Ten_by_Product_2020_US_bar.html" width="1500" height="600">
                 </div>
@@ -181,27 +181,27 @@
             </p>
         </div>
         <div class="row">
-            <div class="col-md-12 plots " >
+            <div class="col-md-12 plots" >
                 <br>
                 <h2>Bottom 10 US Sales by Product 2020 through 2021 </h2>
             </div>
-            <div class="row">
-                <div class="col-md-12 ploSts" >
+            <div>
+                <div class="col-md-12 plots" >
                     <embed type="text/html"  src="Graphs/Bottom_Ten_by_Product_2021_US_bar.html" width="1500" height="600">
                 </div>
                 <div class="col-md-12 plots">
                     <embed type="text/html" src="Graphs/Bottom_Ten_by_Product_2020_US_bar.html"  width="1500" height="600">
                 </div>
-                <br>
-                <p>
-                    Here we can focus on what products have not done well. Excluding bundles or higher volumes of flagships 
-                    we see that Vitamin B12 and Magnesium dont seem to be contributing to much and could just be causing 
-                    the company loss with production and logistics. We recommend that the company take a strong look at these 
-                    products to determine if they want to sink more funds into them, or continue to market their strongest money 
-                    makers.
-                </p>  
             </div>
+            <br>
         </div>
+        <p>
+            Here we can focus on what products have not done well. Excluding bundles or higher volumes of flagships 
+            we see that Vitamin B12 and Magnesium dont seem to be contributing to much and could just be causing 
+            the company loss with production and logistics. We recommend that the company take a strong look at these 
+            products to determine if they want to sink more funds into them, or continue to market their strongest money 
+            makers.
+        </p>  
     </div>
 </body>
 </html>
